src/style/layout/_footer.scss
.footer {
  position: sticky;
  position: -webkit-sticky;
  background-color: #06081a;
  color: $white-color;
  padding: 30px 0;

  @include respond(phone) {
    border: 0px;
  }

  &-wrapper {
    color: $white-color;
    h1,
    a {
      color: $white-color;
      font-weight: lighter;
      font-size: 2.5rem;
    }
    a {
      text-decoration: underline;
    }

    &__left {
      text-align: left;
      padding-top: 200px;
      padding-bottom: 200px;
    }

    &__right {
      padding-top: 200px;
      text-align: right;

      h1 {
        font-weight: lighter;
      }
    }
  }

  &__text {
    color: darken(white, 20%);
    font-size: 1.3rem;

    a {
      color: darken(white, 50%);
      font-size: 1.3rem;
      transition: all 0.4s;
      display: inline-block;
      background-color: $dark-grey;

      &:hover,
      &:active {
        color: $primary-color;
        -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
        box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
      }
    }
  }

  & hr {
    margin-top: 1rem;
    margin-bottom: 1rem;
    border: 0;
    width: 50%;
    border-top: 2px solid rgba(255, 255, 255, 0.1);
  }
}

.social-links {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;

  a {
    display: flex;
    flex-direction: column;
    justify-content: center;
    color: $white-color;
    font-size: 2.5rem;
    width: 5rem;
    height: 5rem;
    // margin: $default-font-size $default-font-size;
    transition: all 0.2s ease-in;
    text-decoration: none;

    &:hover {
      transform: translateY(-2px);
    }
  }
}

.back-to-top i {
  color: $white-color;
  margin: 1rem 0 $default-font-size;
  transition: all 0.2s ease-in;

  &:hover {
    transform: translateY(-2px);
  }
}

